@@ -1,5 +1,10 @@
 2004-10-14 Derek Price <derek@ximbiot.com>
 
+	* import.c (import): Remove an unecessary level of nesting.  Simplify
+	xmalloc/sprintf with asnprintf.  Remove useless comment.
+
+2004-10-14 Derek Price <derek@ximbiot.com>
+
 	* import.c (import): Verify branch specifications more thoroughly.
 	* sanity.sh (importb): Adapt to new error message.
 	(import-quirks): New test.
